# ResRam_NG

./: .gitignore  Convert abs spectra.pxp  FSRSanalysis_v2.ipynb  GEMINI.md  README.md  ResRamQt.py  benchmark_resram.py  fit_resram_python.py  fit_resram_rust.py  load_dataset.py  pyproject.toml  resram_core.py  test.ipynb
.github/workflows/: gui_release.yml  rust_release.yml
example/: output.txt
resram_rust/: Cargo.toml
resram_rust/src/: lib.rs
src/resram_ng/: ResRamQt.py  __init__.py  resram_core.py  rust_tools.py
src/resram_ng/example/: inp_new.txt
