[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resram_core"
version = "0.1.0"
description = "Resonance Raman (ResRAM) Core for spectroscopic analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Likun Cai", email = "kentclk@outlook.com" }
]
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "tqdm",
    "pyqt6",
    "pyqtgraph"
]

[project.optional-dependencies]
rust = [
    "maturin>=1.7.0",
]

[project.scripts]
resram-gui = "resram_ng.ResRamQt:main"
resram-rust-build = "resram_ng.rust_tools:build_wheel"
resram-rust-install = "resram_ng.rust_tools:install_latest_wheel"
resram-rust-develop = "resram_ng.rust_tools:develop"

[tool.hatch.build.targets.wheel]
packages = ["src/resram_ng"]

[tool.hatch.build.targets.sdist]
include = [
    "src/resram_ng",
    "src/resram_rust",
    "benchmark_resram.py",
    "fit_resram_python.py",
    "fit_resram_rust.py",
    "load_dataset.py",
    "README.md",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "uv>=0.9.15",
    "pytest>=8.0.0",
]
